--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fontsource/poppins": "^4.5.8",
+    "framer-motion": "^11.0.3",
     "@reduxjs/toolkit": "^1.8.2",
     "@vime/core": "^5.3.1",
     "@vime/react": "^5.3.1",
