--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vime/core": "^5.3.1",
     "@vime/react": "^5.3.1",
     "axios": "^0.27.2",
+    "framer-motion": "^6.3.10",
     "html-react-parser": "^1.4.14",
     "moment": "^2.29.4",
     "react": "^18.1.0",
@@ -27,8 +28,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
-    "swiper": "^8.2.2",
-    "react-spring": "^9.4.2"
+    "swiper": "^8.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
