--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
-    "swiper": "^8.2.2",
+    "swiper": "^8.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
